force-app/main/default/objects/PaymentRequest__c/PaymentRequest__c.object-meta.xml
<CustomObject>
    <description>This is a payment request made by a user</description>
    <label>Payment Request</label>
    <nameField>
        <label>Payment Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>