force-app/main/default/objects/PaymentRequest__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>