force-app/main/default/objects/PaymentRequest__c/fields/FirstChargeDate__c.field-meta.xml
<CustomField>
    <fullName>FirstChargeDate__c</fullName>
    <label>First Charge Date</label>
    <type>Date</type>
</CustomField>