force-app/main/default/objects/PaymentRequest__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Item number in the request group</description>
    <label>Item number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>