force-app/main/default/objects/PaymentRequest__c/fields/Payment_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Id__c</fullName>
    <displayFormat>P{0000000000}</displayFormat>
    <label>Payment Reference Id</label>
    <type>AutoNumber</type>
</CustomField>