force-app/main/default/objects/PaymentRequest__c/fields/PaymentRequests__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequests__c</fullName>
    <label>Payment Requests</label>
    <referenceTo>Payment_Request_Group__c</referenceTo>
    <relationshipName>PaymentRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>