force-app/main/default/objects/PaymentRequest__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>The type of payment request, either and immediate one time transaction or a subscription</description>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>immediate</fullName>
            </value>
            <value>
                <fullName>subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>