force-app/main/default/objects/PaymentRequest__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>