force-app/main/default/objects/PaymentRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>FirstChargeDate__c</columns>
    <columns>Frequency__c</columns>
    <columns>PaymentRequests__c</columns>
    <columns>PaymentType__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>